examples/test/testpolicy4293.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4293
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key8: value45
      key27: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value35
          key35: value23
      podSelector:
        matchLabels:
          key29: value19
          key25: value44
